# pantry

./: .gitignore  README.md  db.json  pyproject.toml
backend/: main.py
backend/data/entities/: product_definition.py  product_instance.py  shopping_list.py  storage_area.py
backend/data/graphql/: __init__.py  product_definition.py  product_instance.py  shopping_list.py  storage_area.py
backend/entities/: core.py  graphql.py  storage.py
backend/graphql/: core.py  storage.py
frontend/: .gitignore  .pnp.cjs  next.config.js  package.json
frontend/src/: CoreChrome.tsx  apollo-client.ts
frontend/src/app/: layout.tsx  loading.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/shelves/: page.tsx
frontend/src/app/shopping-lists/: page.tsx
frontend/src/app/todos/: page.tsx
frontend/src/config/: UIConfigContext.tsx
frontend/src/layout/: LayoutNavigationSidebar.tsx  PantryLink.tsx  VerticalDivider.tsx
frontend/src/layout/icons/: Icon.tsx  iconMappings.tsx
frontend/src/layout/navigation/: VerticalNavigationList.tsx
frontend/src/utilities/: DebugWindow.tsx
